[package]
authors = ['Levia']
description = 'A modified version of sp_runtime::MultiSignature'
edition = '2018'
homepage = 'https://levia.io'
license = 'MIT'
name = 'custom-signature'
repository = 'https://github.com/leviachain/levia'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[features]
default = ['std']
std = [
    'codec/std',
    'serde',
	  "sp-std/std",
	  "sp-io/std",

]
